--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
       }
       return state;
     }
-    // action
-    let action = {type: 'NEW_ORDER', payload: 'Coffee'};
 
     let store = Redux.createStore(reducer);
 
-    store.dispatch(action);
-    store.dispatch(action);
-    store.dispatch(action);
+    store.dispatch({type: 'NEW_ORDER', payload: {id: 1, order: 'Coffee', amount: 1}});
+    store.dispatch({type: 'NEW_ORDER', payload: {id: 2, order: 'Cake', amount: 1}});
+    store.dispatch({type: 'NEW_ORDER', payload: {id: 3, order: 'Sandwish', amount: 1}});
 
+    console.log(store.getState());
+    store.dispatch({type: 'CHANGE_AMOUNT', payload: {id: 2, amount: 3}});
+    console.log(store.getState());
+    store.dispatch({type: 'DELETE_ORDER', payload: {id: 3}});
     console.log(store.getState());
 
   </script>
